--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 tools/config2.py
-tools/arxiv_papers.csv
 *.pyc
-*.csv
-*.jsonl
-*.json
+tools/arxiv_papers_2025_02_07_13_06_37_upload.jsonl
+tools/arxiv_papers_2025_02_07_13_06_37.csv
+tools/arxiv_papers_ch_2025_02_07_11_41_48.csv
