--- a/tools/llm/GLM4.5/requirements.txt
+++ b/tools/llm/GLM4.5/requirements.txt
@@ -1,6 +1,7 @@
 transformers>=4.57.1, <5
 pre-commit>=4.2.0
 accelerate>=1.10.1
+openai
 
 # not recommended to install sglang and vllm in the same environment
 
